# backyard_bird_cam

./: .cursor.json  .env.example  .flake8  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  README_PHOTO_TRANSFER.md  TROUBLESHOOTING.md  analyze_pir_data.py  app.py  bird_cam.py  bird_cam.service  bird_camera.service  calibrate_pir.py  clean_all_branches.sh  deploy_to_jetson.sh  env.example  jetson_compatibility.py  pir_motion_detector.py  replace_ips.py  replace_ips.txt  requirements.txt  setup.py  setup_tensorflow_jetson.sh  transfer_pictures.sh
data/test_photos/: README.md
deploy/jetson/: deploy_inference_server.sh
docs/: README.md  README_jetson_onnx.md  README_pi_camera_setup.md  README_pi_photo_transfer.md  camera_setup.md  cloud_integration_guide.md  file_transfer.md  hardware_testing_guide.md  pi_setup.md  project_roadmap.md
nano_inference_server/: README.md  __init__.py  cloudflared_setup.py  config.json  install.sh  jetson_server.py  main.py  requirements.txt  setup.py  test_dev_mode.py  test_keras_model.py
nano_inference_server/api/: __init__.py  server.py
nano_inference_server/inference/: __init__.py  model.py
nano_inference_server/monitoring/: __init__.py  directory_monitor.py
nano_inference_server/storage/: __init__.py  result_storage.py
notebooks/: README.md  bird_sensor_model_development.ipynb  species_scraper.ipynb  tf2onnx_implementation.ipynb
pi_bird_cam/: __init__.py  main.py
pi_bird_cam/camera/: __init__.py  camera_handler.py
pi_bird_cam/config/: __init__.py  settings.py
pi_bird_cam/inference/: __init__.py
pi_bird_cam/scripts/: adjust_focus.py  set_lens_position.py  setup_services.sh  simple_pir_trigger.py  transfer_pictures.sh
pi_bird_cam/sensors/: __init__.py
pi_bird_cam/services/: bird-camera.service  bird-camera@.service  pigpiod.service
pi_bird_cam/storage/: __init__.py  photo_storage.py
pi_bird_cam/uploader/: uploader.py
scripts/: README_connectivity_test.md  bird_classes.py  camera_test_suite.py  deploy_to_jetson.sh  find_images.sh  install.sh  kerastoonnx.py  launch_bird_cam.sh  pir_photo_capture.py  send_photos.sh  setup_onnx_jetson.sh  simple_pir_trigger.py  status.sh  sync_photos_to_mac.sh  test_all_images.py  test_jetson_imports.py  test_nano_server.py  test_onnx_model.py  test_pi_nano_connectivity.py  test_workflow.py  transfer_images.sh  transfer_photo_to_mac.sh
scripts/service/: backyard_bird_cam.service  bird-camera.service  bird_cam.service  bird_camera.service  pigpiod.service
scripts/setup/: fix_gpu_memory.sh  install_bird_cam.sh  install_service.sh  restart_pigpiod.sh  setup_permissions.sh  verify_pigpiod.sh
scripts/tools/: setup.sh
src/: __init__.py  main.cpp  main.py
src/camera/: camera_handler.py
src/config/: settings.py
src/cpp/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/hardware/: rpi_camera_module3.cpp  rpi_camera_module3.h
src/inference/: inference_engine.py
src/sensors/: pir_sensor.py
src/storage/: photo_storage.py
systemd/: README.md
tests/: debug_pir.py  log_pir_activity.py  monitor_pir.py  motion_capture_test.py  test_camera.py  test_camera_handler.py  test_inference_engine.py  test_photo_storage.py  test_pir.py  test_pir_sensor.py  test_settings.py  test_uploader.py
(+35 files in other folders)
